Fix alignments for some boxes.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -832,7 +832,7 @@ svg {
     background-color: var(--medium-gray);
     position: relative;
     padding: 2% var(--article-child-padding);
-    margin: var(--article-child-margin);
+    margin: calc(var(--article-child-margin)/2) ;
 }
 
 .wicinfo-box-gray{
